--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation "com.google.firebase:firebase-database:$firebase_database"
     implementation "com.google.firebase:firebase-analytics:$firebase_analitics"
 
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.7.1'
+
 }
