--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,33 +10,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioMblabs">
         <activity
-            android:name=".CadasterItemActivity"
+            android:name=".cadasterEvent.CadasterEventActivity"
             android:exported="true" >
-
-
-
-        </activity>
-
-        <activity
-            android:name=".splash.SplashActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".register.RegisterActivity"
-            android:exported="true" />
-        <activity
-            android:name=".login.LoginActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".home.MainActivity"
-            android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".splash.SplashActivity"
+            android:exported="true">
 
         </activity>
+        <activity
+            android:name=".register.RegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".home.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
