Add Register Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.marcelodonato.desafiomblabs">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,28 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioMblabs">
         <activity
-            android:name=".cadasterEvent.CadasterEventActivity"
-            android:exported="true" >
+            android:name=".splash.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".splash.SplashActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".login.LoginActivity"
+            android:exported="true" />
         <activity
             android:name=".register.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".home.MainActivity"
             android:exported="true" />
         <activity
-            android:name=".home.MainActivity"
-            android:exported="true"></activity>
+            android:name=".cadasterEvent.RegisterEventActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
