--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     def firebase_auth = "21.0.1"
     def firebase_firestore = "24.0.0"
     def firebase_database = "20.0.3"
