--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     //Lottie
     implementation 'com.airbnb.android:lottie:3.7.1'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
