--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'com.google.gms.google-services'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 32
@@ -43,6 +44,10 @@ dependencies {
     def firebase_firestore = "24.0.0"
     def firebase_database = "20.0.3"
     def firebase_analitics = "20.0.2"
+    def permissionDispatcherVersion = "3.3.1"
+    def coroutinesVersion = "1.0.1"
+    def crop = "2.8.0"
+    def koin_version ="2.2.3"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -64,5 +69,19 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // PermissionDispatcher
+    implementation "com.github.hotchemi:permissionsdispatcher:$permissionDispatcherVersion"
+    kapt "com.github.hotchemi:permissionsdispatcher-processor:$permissionDispatcherVersion"
+
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+
+    // Crop
+    implementation "com.theartofdev.edmodo:android-image-cropper:$crop"
+
+    //Koin
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-viewmodel:$koin_version"
 
 }
